# LASUR-swiss-proximity

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf.template
data_processing/: Makefile  processing.ipynb  processing.py  pyproject.toml  readme.md
data_processing/create_processing_units/: process_tiles_and_hexagons.fmw  readme.md
data_processing/create_processing_units/source/: Verkehrszonen_NPVM_2017_agglo.qmd  Verkehrszonen_NPVM_2017_agglo.shx  ch.swisstopo.images-swissimage-dop10.metadata.dbf  ch.swisstopo.images-swissimage-dop10.metadata.prj  ch.swisstopo.images-swissimage-dop10.metadata.shx  dissolved_Agglo_Verkehrszonen_NPVM_2017_agglo.dbf  dissolved_Agglo_Verkehrszonen_NPVM_2017_agglo.qix  dissolved_Agglo_Verkehrszonen_NPVM_2017_agglo.shp  dissolved_Agglo_Verkehrszonen_NPVM_2017_agglo.shx  dissolved_Gem_Verkehrszonen_NPVM_2017_agglo.dbf  dissolved_Gem_Verkehrszonen_NPVM_2017_agglo.shx  dissolved_Gem_Verkehrszonen_NVPM_2017.dbf  dissolved_Gem_Verkehrszonen_NVPM_2017.shx  dissolved_Land_Verkehrszonen_Schweiz_NPVM_2017.dbf  dissolved_Land_Verkehrszonen_Schweiz_NPVM_2017.shp  dissolved_Land_Verkehrszonen_Schweiz_NPVM_2017.shx  swissBOUNDARIES3D_1_3_TLM_HOHEITSGEBIET.dbf
data_processing/create_vector_tiles/: create_vector_tiles.fmw  create_vector_tiles.fmw.recover
data_processing/create_vector_tiles/output/: access_5th_0_8.mbtiles  style_access_5th.json
data_processing/create_vector_tiles/output/h3/: low.mbtiles
data_processing/maplibre/: access_5th_transit.html  main.js
data_processing/source_data/demand/: ALL_2017_2050_share_of_trips_taz.pkl
data_processing/source_data/hex_to_taz/: hex_to_taz.pkl
data_processing/source_data/supply/: All_CH_access_light_TAZ.pkl
(+67 files in other folders)
