[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swissmobility"
authors = [
	{name = "Régis Longchamp",email = "regis.longchamp@epfl.ch"},
]
description = "ff"
readme = "README.md"
keywords = ["python"]
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Operating System :: Unix",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
	"click",
	"geopandas",
	"quarto",
	"h3",
	"jupyterlab",
	"h3pandas",
	"sqlalchemy",
	"geoalchemy2",
	"psycopg2-binary>=2.9.10",
	"pydeck>=0.9.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
]

[tool.setuptools]
py-modules = []
